# magazin-manager-project

./: CMakeLists.txt  Engine.cpp  Engine.h  LICENSE  README.md  log.cpp  log.h  main.cpp  stringR.cpp  stringR.h
controllers/: Controller.cpp  Controller.h  ControllerAdauga.cpp  ControllerAdauga.h  ControllerAdaugaProdusNou.cpp  ControllerAdaugaProdusNou.h  ControllerAdaugaRefill.cpp  ControllerAdaugaRefill.h  ControllerComanda.cpp  ControllerComanda.h  ControllerGoale.cpp  ControllerGoale.h  ControllerReadme.cpp  ControllerReadme.h  ControllerStats.cpp  ControllerStats.h  Readme.cpp  Readme.h  Stats.cpp  Stats.h  Viewer.cpp  Viewer.h
models/: Bun.cpp  Bun.h  Model.cpp  Model.h  ModelBun.cpp  ModelBun.h  ModelReadme.cpp  ModelReadme.h  ModelStoc.cpp  ModelStoc.h  Stoc.cpp  Stoc.h
views/: Console.cpp  Console.h  ViewConsole.cpp  ViewConsole.h
